Subida de mis módulos de elección y papeleta
Subida de mis dos modulos de que es la eleccion y su papeleta

--- a/PIS_PROYECTO/nbproject/project.properties
+++ b/PIS_PROYECTO/nbproject/project.properties
@@ -99,7 +99,8 @@ javac.classpath=\
     ${file.reference.xstream-1.4.20.jar}:\
     ${file.reference.xstream-benchmark-1.4.20.jar}:\
     ${file.reference.xstream-hibernate-1.4.20.jar}:\
-    ${file.reference.xstream-jmh-1.4.20.jar}
+    ${file.reference.xstream-jmh-1.4.20.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
