--- a/PIS_PROYECTO/nbproject/project.properties
+++ b/PIS_PROYECTO/nbproject/project.properties
@@ -54,7 +54,9 @@ file.reference.jettison-1.2.jar=lib\\jettison-1.2.jar
 file.reference.joda-time-1.6.jar=lib\\joda-time-1.6.jar
 file.reference.kxml2-min-2.3.0.jar=lib\\kxml2-min-2.3.0.jar
 file.reference.mxparser-1.2.2.jar=lib\\mxparser-1.2.2.jar
+file.reference.ojdbc11.jar=lib\\ojdbc11.jar
 file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
+file.reference.sql.jar=lib\\sql.jar
 file.reference.stax-1.2.0.jar=lib\\stax-1.2.0.jar
 file.reference.stax-api-1.0.1.jar=lib\\stax-api-1.0.1.jar
 file.reference.stax2-api-4.2.jar=lib\\stax2-api-4.2.jar
@@ -99,7 +101,9 @@ javac.classpath=\
     ${file.reference.xstream-1.4.20.jar}:\
     ${file.reference.xstream-benchmark-1.4.20.jar}:\
     ${file.reference.xstream-hibernate-1.4.20.jar}:\
-    ${file.reference.xstream-jmh-1.4.20.jar}
+    ${file.reference.xstream-jmh-1.4.20.jar}:\
+    ${file.reference.ojdbc11.jar}:\
+    ${file.reference.sql.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
