--- a/PIS_PROYECTO/nbproject/private/private.properties
+++ b/PIS_PROYECTO/nbproject/private/private.properties
@@ -2,7 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.gson-2.2.2.jar=C:\\Users\\Edison\\Downloads\\gson-2.2.2.jar(1)\\gson-2.2.2.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\cobos\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
+user.properties.file=C:\\Users\\Edison\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
