--- a/PIS_PROYECTO/nbproject/project.properties
+++ b/PIS_PROYECTO/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
 file.reference.antlr-2.7.7.jar=lib\\antlr-2.7.7.jar
 file.reference.cglib-nodep-2.2.jar=lib\\cglib-nodep-2.2.jar
 file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
+file.reference.edisoncorSX.jar=../../../EdisoncorSx-0.07/dist/edisoncorSX.jar
 file.reference.gson-2.2.2.jar=..\\..\\..\\..\\Downloads\\gson-2.2.2.jar
 file.reference.hibernate-commons-annotations-4.0.2.Final.jar=lib\\hibernate-commons-annotations-4.0.2.Final.jar
 file.reference.hibernate-core-4.2.5.Final.jar=lib\\hibernate-core-4.2.5.Final.jar
@@ -48,9 +49,11 @@ file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=lib\\hibernate-jpa-2.0-api-
 file.reference.javassist-3.15.0-GA.jar=lib\\javassist-3.15.0-GA.jar
 file.reference.jboss-logging-3.1.0.GA.jar=lib\\jboss-logging-3.1.0.GA.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.1.Final.jar=lib\\jboss-transaction-api_1.1_spec-1.0.1.Final.jar
+file.reference.jcommon-1.0.23.jar=..\\..\\..\\jar\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jdom-1.1.3.jar=lib\\jdom-1.1.3.jar
 file.reference.jdom2-2.0.5.jar=lib\\jdom2-2.0.5.jar
 file.reference.jettison-1.2.jar=lib\\jettison-1.2.jar
+file.reference.jfreechart-1.0.19.jar=..\\..\\..\\jar\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 file.reference.joda-time-1.6.jar=lib\\joda-time-1.6.jar
 file.reference.kxml2-min-2.3.0.jar=lib\\kxml2-min-2.3.0.jar
 file.reference.mxparser-1.2.2.jar=lib\\mxparser-1.2.2.jar
@@ -99,7 +102,10 @@ javac.classpath=\
     ${file.reference.xstream-1.4.20.jar}:\
     ${file.reference.xstream-benchmark-1.4.20.jar}:\
     ${file.reference.xstream-hibernate-1.4.20.jar}:\
-    ${file.reference.xstream-jmh-1.4.20.jar}
+    ${file.reference.xstream-jmh-1.4.20.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.edisoncorSX.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
