--- a/PIS_PROYECTO/nbproject/project.properties
+++ b/PIS_PROYECTO/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.cglib-nodep-2.2.jar=lib\\cglib-nodep-2.2.jar
 file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
 file.reference.edisoncorSX.jar=../../../EdisoncorSx-0.07/dist/edisoncorSX.jar
 file.reference.gson-2.2.2.jar=..\\..\\..\\..\\Downloads\\gson-2.2.2.jar
+file.reference.gson-2.2.2.jar-1=..\\..\\..\\..\\..\\Downloads\\gson-2.2.2.jar
 file.reference.hibernate-commons-annotations-4.0.2.Final.jar=lib\\hibernate-commons-annotations-4.0.2.Final.jar
 file.reference.hibernate-core-4.2.5.Final.jar=lib\\hibernate-core-4.2.5.Final.jar
 file.reference.hibernate-entitymanager-4.2.5.Final.jar=lib\\hibernate-entitymanager-4.2.5.Final.jar
@@ -105,7 +106,8 @@ javac.classpath=\
     ${file.reference.xstream-jmh-1.4.20.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.edisoncorSX.jar}
+    ${file.reference.edisoncorSX.jar}:\
+    ${file.reference.gson-2.2.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
