--- a/PIS_PROYECTO/nbproject/project.properties
+++ b/PIS_PROYECTO/nbproject/project.properties
@@ -51,10 +51,12 @@ file.reference.javassist-3.15.0-GA.jar=lib\\javassist-3.15.0-GA.jar
 file.reference.jboss-logging-3.1.0.GA.jar=lib\\jboss-logging-3.1.0.GA.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.1.Final.jar=lib\\jboss-transaction-api_1.1_spec-1.0.1.Final.jar
 file.reference.jcommon-1.0.23.jar=..\\..\\..\\jar\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=..\\..\\..\\..\\..\\Downloads\\jar\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jdom-1.1.3.jar=lib\\jdom-1.1.3.jar
 file.reference.jdom2-2.0.5.jar=lib\\jdom2-2.0.5.jar
 file.reference.jettison-1.2.jar=lib\\jettison-1.2.jar
 file.reference.jfreechart-1.0.19.jar=..\\..\\..\\jar\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=..\\..\\..\\..\\..\\Downloads\\jar\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 file.reference.joda-time-1.6.jar=lib\\joda-time-1.6.jar
 file.reference.kxml2-min-2.3.0.jar=lib\\kxml2-min-2.3.0.jar
 file.reference.mxparser-1.2.2.jar=lib\\mxparser-1.2.2.jar
@@ -107,7 +109,9 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.edisoncorSX.jar}:\
-    ${file.reference.gson-2.2.2.jar-1}
+    ${file.reference.gson-2.2.2.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
