--- a/PIS_PROYECTO/nbproject/project.properties
+++ b/PIS_PROYECTO/nbproject/project.properties
@@ -141,7 +141,7 @@ main.class=pis_proyecto.PIS_PROYECTO
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
